--- a/style.css
+++ b/style.css
@@ -6,30 +6,42 @@
    #wrapper{
     width: 950px;
     background-color: silver;
-    margin: 0px auto;
+    margin: auto;
+    display: inline-block;
    }
    #header{
     min-height: 150px;
     background-color: green;
+    margin: 15px;
+    display: block;
    }
    #navigation{
     min-height: 300px;
     width: 200px;
     background-color: blue;
+    margin-left: 15px;
+    display: inline-block;
    }
    #main_content{
     min-height: 400px;
     width: 700px;
     background-color: red;
+    display: inline-block;
+    margin-left: 15px;
+    vertical-align: top;
    }
    .subcontents{
     min-height: 200px;
     width: 210px;
     background-color: yellow;
+    display: inline-block;
+    margin: 15px;
+
    }
    #advertisement{
     min-height: 120px;
     width: 660px;
     background-color: purple;
+    display: block;
    }
    
